[metadata]
name = constructs
summary = Constructs and data structure primitives
description-file =
    README.md
author = Joshua Harlow
author-email = harlowja@yahoo-inc.com
home-page = http://github.com/harlowja/constructs/'
keywords = types constructs primitives
classifier =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python
    Topic :: Software Development
    Topic :: Software Development :: Libraries
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.6
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.3

[global]
setup-hooks =
    pbr.hooks.setup_hook

[files]
packages =
    constructs

[nosetests]
cover-erase = true
verbosity = 2
